--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -25,7 +25,61 @@
   </div>
 </div>
 
- <!--All Campaign section-->
+ <!--Carousel section-->
+
+<div class='w-full m-auto px-10 mt-5 mb-10'>
+
+ <div class="swiffy-slider slider-item-show1 slider-nav-sm slider-nav-page slider-item-snapstart slider-item-nogap slider-nav-round slider-nav-dark slider-indicators-sm slider-indicators-outside slider-indicators-round slider-indicators-dark slider-item-last-visible">
+    <div class="slider-container" style='height:600px;'>
+      <div class="p-3 p-xl-5 text-light d-flex flex-column justify-content-center align-items-center"  style="background-image: url('{% static 'slider3.webp' %}'); background-size: cover; max-height: 100%; max-width: 100%; background-position: center;">
+          <div class='w-full mx-20' style='margin-top:250px'>
+            <h1 class="text-2xl font-bold my-4 text-gray-700">Empowering Health Through Vaccination Systems</h1>
+            <p class="mb-4 text-gray-700">
+                Experience a seamless and efficient vaccination process with our advanced vaccination system slider. We prioritize your health and well-being by <br> providing a user-friendly platform that streamlines the entire vaccination journey. From appointment scheduling to real-time updates, our system ensures <br> a safe and organized experience for everyone.
+            </p>
+          <button class="hover:bg-blue-900 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Read more</button>
+          </div>
+        </div>
+
+      <div class="p-3 p-xl-5 text-light d-flex flex-column justify-content-center align-items-center"  style="background-image: url('{% static 'slider2.webp' %}'); background-size: cover; max-height: 100%; max-width: 100%; background-position: center;">
+          <div class='w-full mx-20' style='margin-top:250px'>
+            <h1 class="text-2xl font-bold my-4 text-gray-700">Empowering Health Through Vaccination Systems</h1>
+            <p class="mb-4 text-gray-700">
+                Experience a seamless and efficient vaccination process with our advanced vaccination system slider. We prioritize your health and well-being by <br> providing a user-friendly platform that streamlines the entire vaccination journey. From appointment scheduling to real-time updates, our system ensures <br> a safe and organized experience for everyone.
+            </p>
+          <button class="hover:bg-blue-900 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Read more</button>
+          </div>
+      </div>
+      <div class="p-3 p-xl-5 text-light d-flex flex-column justify-content-center align-items-center"  style="background-image: url('{% static 'slider1.jpg' %}'); background-size: cover; max-height: 100%; max-width: 100%; background-position: center;">
+          <div class='w-full mx-20' style='margin-top:250px'>
+            <h1 class="text-2xl font-bold my-4 text-gray-700">Empowering Health Through Vaccination Systems</h1>
+            <p class="mb-4 text-gray-700">
+                Experience a seamless and efficient vaccination process with our advanced vaccination system slider. We prioritize your health and well-being by <br> providing a user-friendly platform that streamlines the entire vaccination journey. From appointment scheduling to real-time updates, our system ensures <br> a safe and organized experience for everyone.
+            </p>
+          <button class="hover:bg-blue-900 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Read more</button>
+          </div>
+      </div>
+       
+    </div>
+
+    <button type="button" class="slider-nav" aria-label="Go left"></button>
+    <button type="button" class="slider-nav slider-nav-next" aria-label="Go left"></button>
+
+    <div class="slider-indicators d-md-none">
+        <button class="" aria-label="Go to slide"></button>
+        <button aria-label="Go to slide"></button>
+        <button aria-label="Go to slide"></button>
+        <button aria-label="Go to slide" class=""></button>
+        <button aria-label="Go to slide"></button>
+        <button aria-label="Go to slide" class="active"></button>
+    </div>
+ </div>
+
+</div>
+
+
+
+ <!--All campaign section-->
 
 <div class="flex flex-wrap justify-center p-4 mb-10">
   <div class="p-3">
@@ -76,7 +130,7 @@
       {% endfor %}
     </div>
   </div>
-</div>
+</div> 
 
 
  <!--Patient Review section-->
@@ -129,8 +183,6 @@
 
 </div>
 
-
- <!--About Us section-->
 
  <!-- About Us section -->
 <div class="flex flex-wrap px-2 py-3 m-5 items-center rounded-lg overflow-hidden shadow-lg mb-20">
