--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -3,35 +3,46 @@
 
     <div class="container mx-auto flex flex-wrap justify-between">
         
-        <div class="w-full md:w-1/3 mb-4 pl-24 md:mb-0">
+        <div class="w-full md:w-1/4 mb-4 pl-24 md:mb-0">
             <h5 class="text-lg font-semibold">Follow Us</h5>
             <div class="flex space-x-2 mt-5">
+                <img class='w-6 h-6 rounded' src="{% static 'facebook.jpeg' %}" alt="Facebook">
                 <img class='w-6 h-6' src="{% static 'LinkedIn.png' %}" alt="LinkedIn">
                 <img class='w-6 h-6' src="{% static 'YouTube.png' %}" alt="YouTube">
-                <img class='w-6 h-6 rounded' src="{% static 'facebook.jpeg' %}" alt="Facebook">
+                <img class='w-6 h-6 rounded' src="{% static 'instagram2.avif' %}" alt="instagram">
             </div>
         </div>
     
 
         
         <div class="w-full md:w-1/4 mb-4 md:mb-0">
-            <h5 class="text-lg font-semibold">Company</h5>
+            <h5 class="text-lg font-semibold">COMPANY</h5>
             <ul>
-                <li>About</li>
-                <li>Contact Us</li>
-                <li>Culture</li>
+                <a href={% url 'about'%}>About Us</a>
+                <br>
+                <a href={% url 'contact'%}>Contact Us</a>
+                <li>FAQs</li>
                 <li>Blog</li>
             </ul>
         </div>
 
         
         <div class="w-full md:w-1/4 mb-4 md:mb-0">
-            <h5 class="text-lg font-semibold">Support</h5>
+            <h5 class="text-lg font-semibold">SUPPORT</h5>
             <ul>
                 <li>Help Care</li>
                 <li>Service Status</li>
                 <li>Chat Support</li>
-                <li>Video Call</li>
+                <li>Pricing</li>
+            </ul>
+        </div>
+
+        <div class="w-full md:w-1/4 mb-4 md:mb-0">
+            <h5 class="text-lg font-semibold">LEGAL</h5>
+            <ul>
+                <li>Terms of use</li>
+                <li>Privacy policy</li>
+                <li>Cookie policy</li>
             </ul>
         </div>
     </div>
