--- a/account/templates/profile.html
+++ b/account/templates/profile.html
@@ -25,46 +25,43 @@
 {% endfor %} {% endif %}
 <div class="px-3 py-4 rounded-xl my-6 ">
  <h1 class="font-bold text-3xl text-center pb-5">
-    Your Details
-  </h1>
-  <div class='mx-20 p-10 mb-20 rounded-lg overflow-hidden shadow-lg'>
-  <div class="flex items-center justify-between w-full">
-    <div class='w-1/2'>
-      <img class='w-2/4 mb-3' src="{% static 'user3.webp' %}" alt="">
-      <button class="w-2/4 px-3 m-auto hover:bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-        <a
-          href="{% url 'password_change' %}"
-          
-        >
+  Your Details
+</h1>
+<div class='mx-auto p-10 mb-20 rounded-lg overflow-hidden shadow-lg max-w-3xl'>
+  <div class="flex flex-col lg:flex-row items-center justify-between w-full">
+    <div class='w-full lg:w-1/2 flex flex-col items-center lg:items-start'>
+      <img class='w-2/4 lg:w-3/4 mb-3' src="{% static 'user3.webp' %}" alt="">
+      <button class="w-2/4 lg:w-3/4 px-3 m-auto lg:m-0 hover:bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        <a href="{% url 'password_change' %}">
           Change Password
         </a>
       </button>
     </div>
-    <div class='w-1/2 mt-5'>
-      <p class=" text-lg text-left pb-5">
-       <b> Name :</b> {{ request.user.account.user.first_name}} {{ request.user.account.user.last_name}}
+    <div class='w-full lg:w-1/2 mt-5 lg:mt-0'>
+      <p class="text-lg text-left pb-5">
+        <b>Name:</b> {{ request.user.account.user.first_name}} {{ request.user.account.user.last_name}}
       </p>
-      <p class=" text-lg text-left pb-5">
-        <b>Email :</b> {{ request.user.account.user.email}}
+      <p class="text-lg text-left pb-5">
+        <b>Email:</b> {{ request.user.account.user.email}}
       </p>
-      <p class=" text-lg text-left pb-5">
-        <b>Birth Date : </b>{{ request.user.account.birth_date}}
+      <p class="text-lg text-left pb-5">
+        <b>Birth Date:</b> {{ request.user.account.birth_date}}
       </p>
-      <p class=" text-lg text-left pb-5">
-        <b>NID No :</b> {{ request.user.account.nid }}
+      <p class="text-lg text-left pb-5">
+        <b>NID No:</b> {{ request.user.account.nid }}
       </p>
-      <p class=" text-lg text-left pb-5">
-        <b>Address : </b>{{ request.user.account.street_address}}, {{ request.user.account.country}}
+      <p class="text-lg text-left pb-5">
+        <b>Address:</b> {{ request.user.account.street_address}}, {{ request.user.account.country}}
       </p>
     </div>
-    
   </div>
-  
+  </div>
+
   </div>
   <h1 class="font-bold text-3xl text-center pb-5">
     Update Profile Information
   </h1>
-  <div class="mx-20 mt-10">
+  <div class="mx-auto px-5 md:px-20">
     <form
       method="post"
       class="bg-violet-800 text-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
@@ -73,8 +70,8 @@
       <br />
       {% for hidden_field in form.hidden_fields %} {{ hidden_field.errors }}
       <br />{{ hidden_field }} {% endfor %}
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-2">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.first_name.id_for_label }}"
@@ -87,7 +84,7 @@
           <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
           {% endfor %} {% endif %}
         </div>
-        <div class="w-full md:w-1/2 px-3">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.last_name.id_for_label }}"
@@ -101,8 +98,8 @@
           {% endfor %} {% endif %}
         </div>
       </div>
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-2">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.email.id_for_label }}"
@@ -114,7 +111,7 @@
           <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
           {% endfor %} {% endif %}
         </div>
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.role.id_for_label }}"
@@ -129,8 +126,8 @@
           {% endfor %} {% endif %}
         </div>
       </div>
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.gender.id_for_label }}"
@@ -143,7 +140,7 @@
           <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
           {% endfor %} {% endif %}
         </div>
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.birth_date.id_for_label }}"
@@ -156,8 +153,8 @@
           {% endfor %} {% endif %}
         </div>
       </div>
-      <div class="flex flex-wrap -mx-3">
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-2">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.password1.id_for_label }}"
@@ -169,7 +166,7 @@
           <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
           {% endfor %} {% endif %}
         </div>
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.password2.id_for_label }}"
@@ -185,8 +182,8 @@
 
       {% for hidden_field in form.hidden_fields %} {{ hidden_field.errors }} {{
       hidden_field }} {% endfor %}
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-2">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.street_address.id_for_label }}"
@@ -198,7 +195,7 @@
           <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
           {% endfor %} {% endif %}
         </div>
-        <div class="w-full md:w-1/2 px-3">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.city.id_for_label }}"
@@ -211,8 +208,8 @@
           {% endfor %} {% endif %}
         </div>
       </div>
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-2">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.postal_code.id_for_label }}"
@@ -224,7 +221,7 @@
           <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
           {% endfor %} {% endif %}
         </div>
-        <div class="w-full md:w-1/2 px-3">
+        <div class="">
           <label
             class="block uppercase tracking-wide text-white text-xs font-bold mb-2"
             for="{{ form.country.id_for_label }}"
@@ -239,7 +236,7 @@
       </div>
       <div class="flex items-center justify-between">
         <button
-          class="w-full md:w-1/2 px-3 m-auto hover:bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          class="w-full md:w-1/2 px-3 mt-4 m-auto hover:bg-black text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit"
         >
           Update
