--- a/account/templates/user_login.html
+++ b/account/templates/user_login.html
@@ -12,8 +12,8 @@
   <div class="w-full md:w-1/2 p-5 rounded-lg">
     <img class='' src="{% static 'login.png' %}" alt="img">
   </div>
-  <div class="py-2 px-3 w-full md:w-1/2 rounded-xl grid-cols-6 text-white mt-12">
-    <div class="w-3/4 m-auto">
+  <div class="py-0 px-0 md:py-2 md:px-3 w-full md:w-1/2 rounded-xl grid-cols-6 text-white mt-12">
+    <div class="w-full lg:w-3/4 m-auto">
       <form
         method="post"
         class=" text-white shadow-md border border-gray-200 rounded px-8 pt-6 pb-8 mb-4"
@@ -49,7 +49,10 @@
             Log In
           </button>
         </div>
-        <p class='mx-20 my-2'>New to Covid Plus <a class='text-black font-bold' href="{% url 'register'%}">create new account</a></p>
+        <p class='mx-5 sm:mx-10 md:mx-20 my-2 text-center'>
+  New to Covid Plus 
+  <a class='text-black font-bold' href="{% url 'register'%}">create new account</a>
+</p>
       </form>
     </div>
   </div>
