--- a/campaign/templates/aboutUs.html
+++ b/campaign/templates/aboutUs.html
@@ -1,44 +1,44 @@
 {% extends 'base.html' %} 
 {% load static %}
 {% block body %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 
-<div class="flex flex-wrap px-2 py-3 m-5 items-center overflow-hidden mb-20">
-    <div class="w-full md:w-1/2 rounded-lg">
-        <img
-        class="w-full p-5 mt-5 mx-5 "
-        src="{% static 'about2.png' %}"
-        alt="image"
-        />
-    </div>
-    <div class="w-full md:w-1/2">
-        <h1 class="text-3xl font-bold mb-2 mx-10">
-        About Us
-        </h1>
+<div class="flex flex-wrap px-2 py-3 m-5 items-center rounded-lg overflow-hidden shadow-lg mb-20">
+  <div class="w-full md:w-1/2">
+    <img
+      class="about-image w-full p-5 m-4 mx-5"
+      src="{% static 'about2.png' %}"
+      alt="image"
+    />
+  </div>
+  <div class="w-full md:w-1/2">
+    <h1 class="text-3xl font-bold mb-2 mx-10">
+      About Us
+    </h1>
 
-        <h1 class="text-2xl font-bold my-4 mx-10 text-gray-700">
-        Empowering Health: Navigating <br />the Path to Vaccination Wellness
-        </h1>
+    <h1 class="text-2xl font-bold my-4 mx-10 text-gray-700">
+      Empowering Health: Navigating <br />the Path to Vaccination Wellness
+    </h1>
 
-        <p class="mb-4 text-gray-700 mx-10">
-        We are dedicated to providing you with comprehensive and reliable
-        information on 
-        vaccinations, guiding you through the journey to better health. Our
-        mission is to empower individuals and communities with knowledge about
-        immunization, ensuring a safer and healthier future for all. Explore
-        our resources, stay informed, and join us in the collective effort
-        to promote wellness through vaccination. Together, let's build a shield of
-        protection for a 
-        healthier world.
-        </p>
-        <button
-        class="hover:bg-blue-900 text-white mx-10 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-        >
-        Explore More
-        </button>
-    </div>
-
-  
+    <p class="mb-4 text-gray-700 mx-10 about-content">
+      We are dedicated to providing you with comprehensive and reliable
+      information on 
+      vaccinations, guiding you through the journey to better health. Our
+      mission is to empower individuals and communities with knowledge about
+      immunization, ensuring a safer and healthier future for all. Explore
+      our resources, stay informed, and join us in the collective effort
+      to promote wellness through vaccination. Together, let's build a shield of
+      protection for a 
+      healthier world.
+    </p>
+    <button
+      class="hover:bg-blue-900 text-white mx-10 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+    >
+      <a href="{% url 'home'%}">Explore More</a>
+    </button>
+  </div>
 </div>
+
 
 {% endblock %}
 
