--- a/campaign/templates/contact.html
+++ b/campaign/templates/contact.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<div class="w-3/4 m-auto gap-4">
-    <div></div>
-    <div class="py-2 px-3 rounded-xl text-white mt-10">
+<div class="w-full md:w-2/3 lg:w-1/2 m-auto mt-10">
+    <div class="py-2 px-3 sm:px-0 rounded-xl text-white mt-10">
         <h1 class="font-bold text-3xl text-center pb-3">Contact Us</h1>
 
         <div class="w-full mt-5">
@@ -102,7 +101,7 @@
                 
 
                 <div class="flex items-center justify-center w-full">
-                    <button class="hover:bg-black text-white w-2/4 m-auto font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+                    <button class="hover:bg-black text-white w-2/3 md:w-1/2 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"  type="submit">
                         Send Message
                     </button>
                 </div>
