--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,11 +1,11 @@
 {% load static %}
-<footer class="text-white py-5" >
+<footer class="text-white py-5">
 
     <div class="container mx-auto flex flex-wrap justify-between">
         
-        <div class="w-full md:w-1/4 mb-4 pl-24 md:mb-0">
-            <h5 class="text-lg font-semibold">Follow Us</h5>
-            <div class="flex space-x-2 mt-5">
+        <div class="w-full md:w-1/4 lg:w-1/4 mb-4 md:mb-0 pl-4 md:pl-4 w-full sm:w-1/2  sm:text-center  text-center sm:text-center md:text-left lg:text-left">
+            <h5 class="ml-0 lg:ml-8 text-lg font-semibold">Follow Us</h5>
+            <div class="flex justify-center space-x-2 mt-5 ml-0 md:ml-4 lg:ml-0 w-full sm:w-1/2">
                 <img class='w-6 h-6 rounded' src="{% static 'facebook.jpeg' %}" alt="Facebook">
                 <img class='w-6 h-6' src="{% static 'LinkedIn.png' %}" alt="LinkedIn">
                 <img class='w-6 h-6' src="{% static 'YouTube.png' %}" alt="YouTube">
@@ -15,7 +15,7 @@
     
 
         
-        <div class="w-full md:w-1/4 mb-4 md:mb-0">
+        <div class="w-full pl-4 md:w-1/2 lg:w-1/4 mb-4 md:mb-0 w-full sm:w-1/2  sm:text-center  text-center sm:text-center md:text-left lg:text-left">
             <h5 class="text-lg font-semibold">COMPANY</h5>
             <ul>
                 <a href={% url 'about'%}>About Us</a>
@@ -27,7 +27,7 @@
         </div>
 
         
-        <div class="w-full md:w-1/4 mb-4 md:mb-0">
+        <div class="w-full pl-4 md:w-1/2 lg:w-1/4 mb-4 md:mb-0 w-full sm:w-1/2  sm:text-center  text-center sm:text-center md:text-left lg:text-left">
             <h5 class="text-lg font-semibold">SUPPORT</h5>
             <ul>
                 <li>Help Care</li>
@@ -37,7 +37,7 @@
             </ul>
         </div>
 
-        <div class="w-full md:w-1/4 mb-4 md:mb-0">
+        <div class="w-full pl-4 md:w-1/2 lg:w-1/4 mb-4 md:mb-0 w-full sm:w-1/2  sm:text-center  text-center sm:text-center md:text-left lg:text-left">
             <h5 class="text-lg font-semibold">LEGAL</h5>
             <ul>
                 <li>Terms of use</li>
@@ -48,7 +48,7 @@
     </div>
 
     
-    <hr class='w-4/4 mx-auto my-4  border-t border-gray-600'>
+    <hr class='w-4/4 mx-auto my-4 border-t border-gray-600'>
 
     
     <div class="text-center">
